# dmc5-vergil-devil-trigger-helper

./: .gitignore  Cargo.toml  README.md  config.json
src/: keycode.rs  main.rs
