[package]
name = "dmc5-vergil-devil-trigger-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.5.0"
rdev = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
exit-for-enter = { path = "../../utils/rust/exit-for-enter" }
keycode = { path = "../../utils/rust/keycode" }
ctrlc = "3.4.7"
