[package]
name = "dmc5-vergil-devil-trigger-helper"
version = "0.2.1"
edition = "2024"

[dependencies]
enigo = "0.5.0"
rdev = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
exit-for-enter = { path = "../../utils/rust/exit-for-enter" }
keycode = { path = "../../utils/rust/keycode", features = ["full"] }
ctrlc = "3.4.7"
toml = "0.9.4"
anyhow = "1.0.98"
